feat: :heavy_plus_sign: Add Add SpringDoc Swagger, JWT Security and JPA MySQL dependencies

--- a/violetSpringGardening/src/main/resources/application.properties
+++ b/violetSpringGardening/src/main/resources/application.properties
@@ -1,1 +1,22 @@
-spring.application.name=violetSpringGardening
+# Configuración de la conexión a MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/baseDeDatos
+spring.datasource.username=campus2023
+spring.datasource.password=campus2023
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Configuración específica de Hibernate (puedes ajustar según requerimientos)
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+logging.level.org.hibernate.sql=debug
+
+#Configuracion Parametros SpringDoc con Swagger
+#Permite habilitar la dependnecia para la gestion de la documentacion
+
+springdoc.api-docs.enabled=true
+#Permite habilitar la UI para visualizar los enPoint
+springdoc.swagger-ui.enabled=true
+#Permite especificar la URL de la UI de Swagger
+springdoc.swagger-ui.path=/doc/swagger-ui.html
+#Permite habilitar el proceso de scaneo de clases y las clase asociadas
+springdoc.packages-to-scan=com.example.violetSpringGardening.web.controller
