--- a/violetSpringGardening/src/main/resources/application.properties
+++ b/violetSpringGardening/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Configuración de la conexión a MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/baseDeDatos
+spring.datasource.url=jdbc:mysql://localhost:3306/jardineria 
 spring.datasource.username=campus2023
 spring.datasource.password=campus2023
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
