--- a/violetSpringGardening/src/main/resources/application.properties
+++ b/violetSpringGardening/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Configuración de la conexión a MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/jardineria
-spring.datasource.username=campus2023
-spring.datasource.password=campus2023
+spring.datasource.username=root
+spring.datasource.password=1097491909
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Configuración específica de Hibernate (puedes ajustar según requerimientos)
