docs: :memo: Add provitional resources about documentation

--- a/violetSpringGardening/src/main/resources/application.properties
+++ b/violetSpringGardening/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-# Configuraciï¿½n de la conexiï¿½n a MySQL
+# Configuraciï¿½n de la conexion a MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/jardineria
 spring.datasource.username=root
-spring.datasource.password=1097491909
+spring.datasource.password=campus2024
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Configuraciï¿½n especï¿½fica de Hibernate (puedes ajustar segï¿½n requerimientos)
+# Configuraciï¿½n especïfica de Hibernate (puedes ajustar segï¿½n requerimientos)
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
